# string-formatter

./: .gitignore  LICENSE  README.md  README_en.md  active.sh  build.sh  requirements.txt  todo.md
.github/workflows/: CI.yml
design/func/: ids.struct  ips.struct
docs/: advanced_use_guide.md  comprehensive_performance_analysis.md  comprehensive_performance_analysis_en.md  mods_guide.md  performance.md  performance_analysis_en.md  rules_guide_en.md  test_rules.json.example
examples/: advanced_usage.py  basic_usage.py  ko_advanced_usage.py  ko_basic_usage.py
mirseo_formatter/: Cargo.toml  README.md  create_visualizations.py  ius_mode_demo.py  pyproject.toml  rules.json  run_comprehensive_test.py  test_security.py
mirseo_formatter/benchmark_results/: benchmark_data.json
mirseo_formatter/comprehensive_benchmark_results/: comprehensive_benchmark_data.json
mirseo_formatter/docs/: comprehensive_performance_analysis.md  comprehensive_performance_analysis_en.md  performance_analysis.md  performance_analysis_en.md  rules_guide.md
mirseo_formatter/examples/: basic_usage.py
mirseo_formatter/rules/: rules.json
mirseo_formatter/src/: lib.rs
mirseo_formatter/test/: comprehensive_benchmark.py  performance_benchmark.py  unify_benchmark.py
test/: app.py
