[package]
name = "mirseo_formatter"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mirseo_formatter"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10.5"
unicode-normalization = "0.1.23"
hex = "0.4.3"
urlencoding = "2.1.3"
anyhow = "1.0.86"
log = "0.4"
env_logger = "0.11.3"
pyo3-log = "0.10.0"
rayon = "1.8.0"
lru = "0.12.3"
dashmap = "5.5.3"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
num_cpus = "1.16.0"
